# emotiv_epoc

./: CMakeLists.txt  README.md  package.xml
msg/: EEGFrame.msg
scripts/: epoc_mock.py  epoc_publish.py  epoc_scalogram.py  epoc_signals.py  epoc_waterfall.py  record.sh
srv/: ChangeFrequency.srv
